tests/ui-msrv/try_transmute_mut-src-not-intobytes.stderr
error[E0277]: the trait bound `NotZerocopy<AU16>: zerocopy::IntoBytes` is not satisfied
  --> tests/ui-msrv/try_transmute_mut-src-not-intobytes.rs:19:52
   |
19 |     let src_not_into_bytes: Result<&mut AU16, _> = try_transmute_mut!(src);
   |                                                    ^^^^^^^^^^^^^^^^^^^^^^^ the trait `zerocopy::IntoBytes` is not implemented for `NotZerocopy<AU16>`
   |
note: required by a bound in `try_transmute_mut`
  --> src/util/macro_util.rs
   |
   |     Src: IntoBytes,
   |          ^^^^^^^^^ required by this bound in `try_transmute_mut`
   = note: this error originates in the macro `try_transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)
